@@ -9,17 +9,13 @@
 // no direct access
 defined('_JEXEC') or die;
 
-$db			= &JFactory::getDbo();
-$session		= &JFactory::getSession();
+// Include the mod_online functions only once.
+require_once dirname(__FILE__).'/helper.php';
 
-$session_id = $session->getId();
+// Get layout data.
+$count = modOnlineHelper::getOnlineCount();
 
-// Get no. of users online not including current session
-$query = 'SELECT COUNT(session_id)'
-. ' FROM #__session'
-. ' WHERE session_id <> '.$db->Quote($session_id)
-;
-$db->setQuery($query);
-$online_num = intval($db->loadResult());
-
-echo $online_num . ' <img src="images/users.png" alt="'. JText::_('Users Online') .'" />';
+if ($count !== false) {
+	// Render the module.
+	require JModuleHelper::getLayoutPath('mod_online', $params->get('layout', 'default'));
+}
